# PLUSplacer-taxtastic

./: .gitignore  README.md  pplacer-tax-SCAMPP.py  pyproject.toml  utils.py
examples/: aln.fasta  bbtre.nwk  output.jplace.jplace  query.fasta  readme.txt  reest_bbtre.nwk  ref.fasta  tmp.fasta  tmp2.fasta
examples/output.jplace.refpkg/: CONTENTS.json  phylo_model2i69o5p4.json  ref.fasta  tree_query1
src/plusplacer_taxtastic/: __main__.py  pplacer_tax_SCAMPP.py
