[build-system]
requires = ["setuptools >= 67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plusplacer-taxtastic"
version = "2.0.0"
authors = [
  { name="John Sundh", email="john.sundh@scilifelab.se" },
]
description = "Extension of pplacer-SCAMPP repository"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "biopython",
  "numpy"
]

[project.urls]
Homepage = "https://github.com/johnne/PLUSplacer-taxtastic"
Issues = "https://github.com/johnne/PLUSplacer-taxtastic/issues"

[project.scripts]
pplacer-tax-SCAMPP = "plusplacer_taxtastic.pplacer_tax_SCAMPP:main_cli"